--- a/config/index.env
+++ b/config/index.env
@@ -1,4 +1,4 @@
-DATABASE=mongodb+srv://eflexmedia1_db_user:z6qJtcWH31Nn5aYU@cluster0.omt3duf.mongodb.net/?appName=Cluster0
+DATABASE=mongodb+srv://eflexmedia1_db_user:z6qJtcWH31Nn5aYU@cluster0.omt3duf.mongodb.net/your_database_name?retryWrites=true&w=majority&appName=Cluster0
 PORT=2022
 JWT="Availtrade"
 
